--- a/style.css
+++ b/style.css
@@ -13,8 +13,10 @@ body {
     max-width: 760px;
     margin: 20px auto;
     border-radius: 3px;
-    box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
-    box-sizing: border-box;
+    -webkit-box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
+            box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding: 0 0 20px;
     border: 1px solid lightgray;
 }
@@ -97,7 +99,10 @@ header #search-note input{
     padding: 5px 10px;
     margin: 10px;
     border-bottom: 1px solid #777;
-    user-select: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
 }
 
 #hide-list label:hover {
@@ -133,8 +138,9 @@ form#add input[type='submit']:hover {
     background: #7c9f34;
 }
 
-
-
+#clock {
+    padding: 15px 30px;
+}
 
 
 
