--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 .wrapper {
     width: 90%;
     max-width: 760px;
-    margin: 20px auto;
+    margin: 0px auto;
     border-radius: 3px;
     -webkit-box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
             box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
@@ -139,7 +139,7 @@ form#add input[type='submit']:hover {
 }
 
 #clock {
-    padding: 15px 30px;
+    padding: 40px 30px 10px 80px;
 }
 
 
